# AutoCLI

./: .gitignore  README.ja.md  README.md  README.zh.md  dev-trae.sh  trae-cli
.github/workflows/: release.yml
adapters/hackernews/: search.yaml
adapters/trae-cn/: commands.yaml  projects.yaml  task-chat.yaml  task-detail.yaml  task-new.yaml  tasks.yaml
crates/autocli-browser/src/: page.rs
crates/autocli-cli/src/: args.rs  main.rs
crates/autocli-core/src/: args.rs
crates/autocli-discovery/src/: yaml_parser.rs
crates/autocli-output/src/: html.rs
crates/autocli-pipeline/src/steps/: tap.rs
crates/opencli-rs-ai/prompts/: generate-adapter.md
crates/opencli-rs-ai/src/: ai_generate.rs  lib.rs  llm.rs
crates/opencli-rs-browser/src/: bridge.rs
crates/opencli-rs-cli/: Cargo.toml
crates/opencli-rs-cli/src/: execution.rs  main.rs
crates/opencli-rs-external/src/: executor.rs  loader.rs
crates/opencli-rs-output/src/: render.rs
extension/selector/: content.js
extension/src/: background.test.ts  cdp.ts
