[package]
name = "opencli-rs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opencli-rs"
path = "src/main.rs"

[dependencies]
opencli-rs-core = { path = "../opencli-rs-core" }
opencli-rs-pipeline = { path = "../opencli-rs-pipeline" }
opencli-rs-browser = { path = "../opencli-rs-browser" }
opencli-rs-output = { path = "../opencli-rs-output" }
opencli-rs-discovery = { path = "../opencli-rs-discovery" }
opencli-rs-external = { path = "../opencli-rs-external" }
opencli-rs-ai = { path = "../opencli-rs-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "string"] }
